updating logging message

--- a/index.html
+++ b/index.html
@@ -229,6 +229,10 @@
                 <input type="number" id="amount" value="11800" min="0" step="100">
             </div>
             <div class="settings-group">
+                <label for="sdkToken">SDK Token:</label>
+                <input type="text" id="sdkToken" placeholder="Enter your SDK token">
+            </div>
+            <div class="settings-group">
                 <label>Requests:</label>
                 <div class="checkbox-group">
                     <label><input type="checkbox" name="requests" value="HEADER" checked> HEADER</label>
